<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:fitsSystemWindows="true"
    android:background="@color/Turquoise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prateekjoshi.agri_app.ProfileActivity">

    <include
        android:id="@+id/profileactivity_toolbar"
        layout="@layout/profile_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/profile_phone_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eprofile_phone"
                android:textSize="18dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/profile_phone_textview"
                android:hint="@string/ereg1_phonenumber"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginLeft="15dp"
                android:layout_alignBaseline="@+id/profile_phone_textview"
                android:id="@+id/profile_phone_edittext"/>
            <TextView
                android:id="@+id/profile_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eprofile_password"
                android:textSize="18dp"
                android:layout_below="@+id/profile_phone_textview"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/profile_password_textview"
                android:layout_marginTop="96dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/profile_password_layout"
                android:weightSum="1">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/profile_password_textview"
                    android:textSize="20dp"
                    android:maxLines="1"
                    android:id="@+id/profile_password_edittext"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/profile_username_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/profile_password_textview"
                android:layout_marginTop="40dp"
                android:background="@color/gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_username_view"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:text="@string/eprofile_firstname"
                android:id="@+id/profile_firstname_textview"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_firstname_textview"
                android:hint="@string/ereg2_firstname"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:id="@+id/profile_firstname_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_firstname_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:text="@string/eprofile_middlename"
                android:id="@+id/profile_middlename_textview"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_middlename_textview"
                android:hint="@string/ereg2_middlename"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/profile_middlename_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_middlename_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:text="@string/eprofile_lastname"
                android:id="@+id/profile_lastname_textview"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_lastname_textview"
                android:hint="@string/ereg2_lastname"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/profile_lastname_edittext"/>

            <View
                android:id="@+id/profile_location_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/profile_lastname_edittext"
                android:layout_marginTop="40dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_location_view"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:text="@string/eprofile_address"
                android:id="@+id/profile_address_textview"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_address_textview"
                android:hint="@string/ereg3_address"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:id="@+id/profile_address_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_address_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:text="@string/eprofile_province"
                android:id="@+id/profile_province_textview"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_province_textview"
                android:hint="@string/ereg3_province"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/profile_province_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_province_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"
                android:text="@string/eprofile_postalcode"
                android:id="@+id/profile_postalcode_textview"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_postalcode_textview"
                android:hint="@string/ereg3_postalcode"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/profile_postalcode_edittext"/>

            <View
                android:id="@+id/profile_landdetails_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/profile_postalcode_edittext"
                android:layout_marginTop="40dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_landdetails_view"
                android:layout_marginTop="20dp"
                android:text="@string/ereg4_rentorown"
                android:id="@+id/profile_ownland_textview"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"/>
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/profile_ownland_textview"
                android:id="@+id/profile_ownland_radiogrp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ereg4_rent"
                    android:textSize="15dp"
                    android:id="@+id/profile_ownland_radiobtnyes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ereg4_own"
                    android:textSize="15dp"
                    android:id="@+id/profile_ownland_radiobtnno"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eprofile_nameland"
                android:layout_below="@+id/profile_ownland_radiogrp"
                android:id="@+id/profile_landname_textview"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_landname_textview"
                android:layout_marginTop="10dp"
                android:hint="@string/ereg4_name"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/profile_landname_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eprofile_hectares"
                android:id="@+id/profile_hectares_textview"
                android:layout_below="@+id/profile_landname_edittext"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:textSize="18dp"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eprofile_number"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:layout_below="@+id/profile_hectares_textview"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/profile_hectares_edittext"/>

            <View
                android:id="@+id/profile_cropdetails_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/profile_hectares_edittext"
                android:layout_marginTop="40dp"
                android:background="@color/gray"/>

            <Button
                android:layout_below="@+id/profile_cropdetails_view"
                android:id="@+id/profile_cropdetails_button"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/eprofile_cropdetails"
                android:textColor="@color/white"
                android:background="@color/Turquoise"/>



        </RelativeLayout>
    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
