<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_delivery"
    android:background="@color/Turquoise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prateekjoshi.agri_app.DeliveryActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_title_textview"
                android:text="@string/edelivery_pick"
                android:layout_marginTop="50dp"
                android:textSize="18sp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_title_textview"
                android:id="@+id/delivery_crop_spinner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_crop_spinner"
                android:layout_marginTop="20dp"
                android:id="@+id/delivery_buyer_textview"
                android:text="@string/edelivery_buyer"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_buyer_textview"
                android:id="@+id/delivery_buyer_edittext"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:maxLines="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_buyer_edittext"
                android:layout_marginTop="20dp"
                android:id="@+id/delivery_phone_textview"
                android:text="@string/edelivery_bphone"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_phone_textview"
                android:id="@+id/delivery_phone_edittext"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:maxLines="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/delivery_phone_edittext"
                android:layout_marginTop="20dp"
                android:id="@+id/delivery_desig_textview"
                android:text="@string/edelivery_desig"
                android:textSize="18sp"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/delivery_desig_textview"
                android:id="@+id/delivery_desig_radiogrp"
                android:layout_marginTop="10dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edelivery_lvendor"
                    android:textSize="15dp"
                    android:id="@+id/delivery_desig_radiobtnlocal" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edelivery_exp"
                    android:textSize="15dp"
                    android:id="@+id/delivery_desig_radiobtnexport"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edelivery_other"
                    android:textSize="15dp"
                    android:id="@+id/delivery_desig_radiobtnother"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_desig_radiogrp"
                android:layout_marginTop="20dp"
                android:id="@+id/delivery_address_textview"
                android:text="@string/edelivery_baddress"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_address_textview"
                android:id="@+id/delivery_address_edittext"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_address_edittext"
                android:layout_marginTop="20dp"
                android:id="@+id/delivery_location_textview"
                android:text="@string/edelivery_darea"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/delivery_location_spinner"
                android:layout_below="@+id/delivery_location_textview"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delivery_location_spinner"
                android:id="@+id/delivery_otherlocation_textview"
                android:layout_marginTop="20dp"
                android:text="@string/edelivery_others"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/delivery_otherlocation_textview"
                android:id="@+id/delivery_otherlocation_edittext"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/edelivery_submit"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="16dp"
                android:id="@+id/submit"
                android:textColor="@color/black"
                android:layout_below="@+id/delivery_otherlocation_edittext"

                />


        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
